feat: get queue stats
